modificación último texto

--- a/wikimedia/map.html
+++ b/wikimedia/map.html
@@ -317,8 +317,8 @@
             </ul>
           <p><strong>Profesor: </strong><span class="rojo">Enzo Abbagliati</span></p>
           <p><strong>Lugar: </strong><span class="rojo" id="uah">La Universidad Alberto Hurtado (UAH)</span></p>
-          <p><strong>Cátedra: </strong><span class="rojo">Paleontología</span></p>
-          <p><strong>Alcance: </strong><span class="rojo">30 docentes, estudiantes e investigadores vinculados a la Paleontología, Arqueología y Antropología.</span></p>
+          <p><strong>Cátedra: </strong><span class="rojo">Comuicación Interactiva</span></p>
+          <p><strong>Alcance: </strong><span class="rojo">30 docentes, estudiantes e investigadores vinculados a la Paleontología, Arqueología y Antropología./span></p>
           <p><strong>Proyecto Wikimedia utilizado: </strong><span class="rojo">Wikipedia</span></p>
           <p><strong>Descripción: </strong></p>
           <p> El proyecto Wikipedia en la Universidad consiste en la elaboración de artículos de Wikipedia en un curso universitario, en este caso el de Comunicación Interactiva. Los artículos construidos por sus alumnas y alumnos son evaluados por el profesor, en razón de una pauta previamente compartida con los voluntarios de Wikimedia Chile, quienes colaboran con el académico tanto en la capacitación presencial de los alumnos, como en el apoyo a los alumnos en la wiki, resolviendo en ambas instancias sus dudas sobre edición en Wikipedia y revisando que los artículos cumplan con las políticas y normas del sitio.</p>
